// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dot ignore use case 1 1`] = `
"# comment
node_modules

# another comment
.idea

# new stuff
bin"
`;

exports[`dot ignore use case 2 1`] = `
"# comment
node_modules

# another comment
.idea"
`;
